@@ -5,7 +5,7 @@ from __future__ import annotations
 
 from hahomematic.const import DEFAULT_INIT_TIMEOUT, DEFAULT_TIMEOUT
 
-CONNECTION_CHECKER_INTERVAL = 60
+CONNECTION_CHECKER_INTERVAL = 30
 RECONNECT_WAIT = 120
 INIT_TIMEOUT = DEFAULT_INIT_TIMEOUT
 TIMEOUT = DEFAULT_TIMEOUT
