@@ -2,6 +2,7 @@ Version 0.25.0 (2022-01-19)
 - Remove SpecialEvents
 - Make UNREACH, STICKY_UNREACH, CONFIG_PENDING generic entities
 - init UNREACH ... on init
+- only poll sysvars when central is available
 
 Version 0.24.4 (2022-01-18)
 - Improve logging
